# QuestoMic

./: README.md
.github/workflows/: build-client.yml  build-uf2.yml
client/: questomic.py  requirements.txt
uf2/: CMakeLists.txt  lwipopts.h  main.c  tusb_config.h  usb_descriptors.c
